--- a/PT2/PT2.csproj
+++ b/PT2/PT2.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
+    <Folder Include="ViewModels\Students\" />
   </ItemGroup>
 
 </Project>
